data/all_generated_tests/raw_wast_tests/br_UnreachableCodeExecution_392.wast
;; 3. A `loop` with a `br` instruction inside targeting itself, followed by an `unreachable` instruction. This tests backward branching to ensure it does not inadvertently hit the `unreachable`.

(assert_invalid
  (module
    (func (loop (result i32)
      (br 0)
      (unreachable)
    ))
  )
  "type mismatch"
)